--- a/src/style/about.css
+++ b/src/style/about.css
@@ -1,11 +1,10 @@
 .main_about {
-    width: 100%;
-    height: 70vh;
+    width: 80%;
+    height: calc(100vh - 80px);
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-top: 70px;
     gap: 15px;
 }
 
