--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,9 @@
 .main {
     margin-top: 70px;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
