--- a/src/style/about.css
+++ b/src/style/about.css
@@ -6,6 +6,8 @@
     justify-content: center;
     align-items: flex-start;
     gap: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .main_about .about {
