--- a/src/style/home.css
+++ b/src/style/home.css
@@ -11,6 +11,8 @@
   padding-top: 40px;
   box-shadow: inset 0px 0px 20px 0px black;
   border-radius: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .message {
