--- a/src/style/main.css
+++ b/src/style/main.css
@@ -4,6 +4,6 @@
     width: 100%;
     box-sizing: border-box;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
 }
