--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.swal-popup {
+    background-color: #F0F2F5;
+    color: #0078D7;
+}
+
+.swal-popup button {
+    background-color: transparent;
+    color: #0078D7;
+    border: 1px solid #0078D7;
+    border-radius: 5px;
+}
