--- a/src/style/aside.css
+++ b/src/style/aside.css
@@ -1,9 +1,8 @@
 aside {
-    min-height: calc(100vh - 80px);
+    min-height: calc(100vh - 100px);
     width: 15%;
     position: fixed;
     left: 10px;
-    top: 70px;
     min-width: 150px;
     box-sizing: border-box;
     display: flex;
@@ -17,6 +16,8 @@ aside {
     margin-right: auto;
 }
 
-aside li {
-    margin-bottom: 10px;
+aside a {
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: #0078d7;
 }
