--- a/src/style/navBar.css
+++ b/src/style/navBar.css
@@ -12,18 +12,15 @@ nav {
     background-color: #F0F2F5;
 }
 
-a {
+nav a {
     text-decoration: none;
     color: #0078D7;
+    white-space: nowrap;
 }
 
-nav .about {
+nav .login {
     white-space: nowrap;
     margin-right: 20%;
-}
-
-nav .home {
-    white-space: nowrap;
 }
 
 .logo {
