--- a/src/style/navBar.css
+++ b/src/style/navBar.css
@@ -18,16 +18,75 @@ nav a {
     white-space: nowrap;
 }
 
-nav .login {
-    white-space: nowrap;
-    margin-right: 20%;
-}
-
-.logo {
-    margin-right: auto;
-}
 
 .logo img {
     width: 50%;
     min-width: 200px;
+}
+
+.user_navBar {
+    height: 55px;
+    width: 55px;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box;
+    position: fixed;
+    right: 20px;
+    top: 15px;
+    z-index: 10;
+}
+
+.user_navBar button {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    padding: 0;
+}
+
+.user_navBar img {
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.user_section {
+    height: 95vh;
+    width: 20%;
+    min-width: 250px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    box-sizing: border-box;
+    background-color: white;
+    position: fixed;
+    right: 10px;
+    top: 5px;
+    z-index: 5;
+    padding: 10px;
+    border: 2px solid #0078D7;
+    border-radius: 5px;
+    padding-top: 65px;
+    padding-left: 15px;
+    gap: 10px;
+}
+
+.user_section a {
+    text-decoration: none;
+    color: #0078D7;
+    white-space: nowrap;
+    font-size: 1.3rem;
+}
+
+.user_section button {
+    color: #0078D7;
+    white-space: nowrap;
+    font-size: 1.3rem;
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
 }
