Agregada pagina para verificacion de usuario, sacadas opciones de inicio con Google

--- a/src/style/navBar.css
+++ b/src/style/navBar.css
@@ -40,15 +40,19 @@ nav a {
 .user_navBar button {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    padding: 0;
+    padding: 5px;
+    background-color: white;
 }
 
 .user_navBar img {
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
     border-radius: 5px;
 }
 
