--- a/src/style/account.css
+++ b/src/style/account.css
@@ -31,9 +31,11 @@
 }
 
 .image_info img {
-  width: 100px;
+  width: 70px;
   border-radius: 5px;
   margin-left: auto;
+  background-color: white;
+  padding: 5px;
 }
 
 
